--- a/Frontend/youRJube/src/app/video-display/video-display.component.html
+++ b/Frontend/youRJube/src/app/video-display/video-display.component.html
@@ -12,7 +12,7 @@
         <a href="watch/{{video.id}}">
             <div class="content-container">
                 <div class="title">
-                    {{video.title}}
+                    {{titleOutput}}
                 </div>
                 <div class="channel-name">
                     <a href="channel/{{channel[0].id}}">
